changes: updating navigation compose